--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,4 +1,5 @@
 .footer-logo {
+    cursor: pointer;
     position: relative;
 }
 
@@ -40,6 +41,7 @@
 }
 
 .footer-email-input {
+    border: none;
     display: flex;
     gap: 30px;
     padding: 20px 30px;
@@ -66,6 +68,10 @@
     background: linear-gradient(264deg, #b415ff -5.09%, #04fa9c 106.28%);
 }
 
+.footer-subscribe a {
+    color: white;
+}
+
 .footer-subscribe:hover {
     transform: scale(1.1);
     transition: 0.3s;
@@ -88,10 +94,6 @@
 .footer-bottom-right a {
     color: white;
     text-decoration: none;
-}
-
-.footer-email-input:hover {
-    border: 2px solid white;
 }
 
 @media(max-width: 768px) {
