add some changes

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@
 body {
     height: 100vh;
     color: white;
-    background-color: #161513;
+    background-color: #23211d;
     font-family: "outfit";
     text-decoration: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
